update technical info

--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: Nikita Lozhnikov's Blog
 email: nikitml@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Nikita Lozhnikov's perosnal blog on Software Development and Engineering, 
+  Machine Learning, Data Science, Studying, Russia and others. 
+  Ruby, Rails, Python, Flask, Scipy, Docker, Docker-compose, UNIX,
+  Tensorflow, Keras, Russia
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://npenzin.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: nikitapenzin
