remove google update git ignore

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Nikita Lozhnikov's Blog
+title: Nikita Lozhnikov's blog
 email: nikitml@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Nikita Lozhnikov's perosnal blog on Software Development and Engineering, 
